fixed another double border in pipeline logs

--- a/cdap-ui/app/hydrator/toppanel.less
+++ b/cdap-ui/app/hydrator/toppanel.less
@@ -627,9 +627,9 @@ body.theme-cdap {
           .macro-error-container { width: 70%; }
         }
         &.pipeline-logs-section {
-          height: ~"calc(100vh - 147px)";
-          height: ~"-moz-calc(100vh - 147px)";
-          height: ~"-webkit-calc(100vh - 147px)";
+          height: ~"calc(100vh - 146px)";
+          height: ~"-moz-calc(100vh - 146px)";
+          height: ~"-webkit-calc(100vh - 146px)";
           box-shadow: none;
 
           .logs-table {
@@ -642,6 +642,12 @@ body.theme-cdap {
               height: ~"calc(100vh - 263px - 46px)";
               height: ~"-moz-calc(100vh - 263px - 46px)";
               height: ~"-webkit-calc(100vh - 263px - 46px)";
+
+              .message-holder {
+                td {
+                  border-bottom: 0;
+                }
+              }
             }
           }
           .fa.fa-expand { display: none; }
